fade to skip button

--- a/Front-end/css/game.css
+++ b/Front-end/css/game.css
@@ -85,7 +85,7 @@
 {
     margin: auto;
     margin-right: var(--space);
-    display: none;
+    transition: opacity var(--transTime);
 }
 
 #game > #board
