--- a/Front-end/css/main.css
+++ b/Front-end/css/main.css
@@ -116,3 +116,13 @@ ul
     font-size: 40px;
     color: red;
 }
+
+.defaultCursorOnHover:hover
+{
+    cursor: default;
+}
+
+.defaultCursorOnHover *:hover
+{
+    cursor: default;
+}
